# impedimenta

./: .gitignore
PKGBUILDs/killjoy-git/: PKGBUILD
PKGBUILDs/killjoy-notifier-notification-git/: PKGBUILD
PROMELA/dijkstra-concurrent/: README.rst  spec.pml
PROMELA/hyman-concurrent/: README.rst  spec.pml
PROMELA/simple/: .gitignore  Makefile  README.rst  spec.pml
alloy/notifiers/: notifiers.als
ansible/junk-ansible-env/: README.rst  site.yml
ansible/physical/: Makefile  inventory  site.yml
ansible/physical/filter_plugins/: my_filters.py
arch-pkgs/file-scheme/: PKGBUILD
arch-pkgs/local-scheme/: .gitignore  PKGBUILD
bash/dbus-starter-address/: README.rst
bash/dbus-starter-address/files/: my-service.service  name.jerebear.MyService1.service
bash/dbus-starter-address/scripts/: install.sh  uninstall.sh
bash/poetry/: deps.sh  editable-packages-v2.sh  editable-packages.sh
bash/tc/: 01-drop-percent.sh  02-drop-percent.sh  exports.sh  reset.sh
docker/: README.rst
docker/Docker Deep Dive, by Nigel Poulton/chap12/: README.rst
docker/Quick Start Kubernetes, by Nigel Poulton/chap4-linode/: README.rst
docker/Quick Start Kubernetes, by Nigel Poulton/chap6/: README.rst  pod.yml  svc-lke.yml
docker/Quick Start Kubernetes, by Nigel Poulton/chap7/: README.rst  deploy.yml
docker/Quick Start Kubernetes, by Nigel Poulton/chap9/: README.rst  deploy.yml
docker/The Docker Book, by James Turnbull/chap5-sinatra/: stop-distributed.sh
docker/The Kubernetes Book, by Nigel Poulton/chap4/: pod.yml
docker/bind-mounts/: Dockerfile  docker-compose.yml
docker/chap5-jenkins-ci/: Dockerfile
docker/chap5-sample/: Dockerfile  run.sh
docker/chap6-apache-jekyll/: .gitignore  backup.sh  start.sh
docker/chap6-java/: docker-compose.yml  launch.sh  start.sh
docker/chap7-composeapp/: Dockerfile  start.sh
docker/chap7-swarm/: README.rst  start-global-service.sh  start-replicated-service.sh
docker/jenkins-ci/: start.sh  stop.sh
docker/sample/: nginx.conf
docker/sinatra/: Dockerfile  run.sh  start-distributed.sh
keras/fashion-mnist/: main.py
keras/mnist/: main.py
keras/test-01/: main.py
keras/tom-sawyer/: main.py  mypy.ini
python/: iterable-iterator.py  regressions.py  test_press_sec.py
python/attrs-demo/: .gitignore  README.rst  pyproject.toml
python/attrs-demo/attrs_demo/: __init__.py
python/attrs-demo/tests/: test_attr.py
python/autouse/: .gitignore  README.rst  check.sh  pyproject.toml
python/context-manager/: main.py
python/custom-exception/: README.rst  check.sh  pyproject.toml
python/custom-exception/custom_exception/: __init__.py
python/custom-exception/tests/: test_custom_exception.py
python/dbus-01/: README.rst  main.py  pyproject.toml
python/dep-mismatch/: .gitignore  PKGBUILD  README.rst  lint.sh  setup.py
python/descriptor/: .gitignore  Makefile  README.rst  pyproject.toml
python/dijkstra-concurrent/: lint.sh  main.py
python/exception-demo/: main.py
python/glib-variant/: README.rst  main.py
python/hyman-concurrent/: main.py
python/intersphinx-path-1/: lint.sh  pyproject.toml
python/intersphinx-path-2/: .gitignore  lint.sh  pyproject.toml
python/intersphinx-path-2/docs/: conf.py  index.rst
python/intersphinx-path-2/intersphinx_path_2/: __init__.py
python/intersphinx-path-2/tests/: test_intersphinx_path_2.py
python/intersphinx-path-root/: .gitignore  Dockerfile  README.rst  compile.sh  docs-portal.conf  lint.sh  pyproject.toml  serve.sh
python/intersphinx-path-root/docs/: conf.py  index.rst
python/notification-generator/: PKGBUILD  README.rst  lint.sh  mypy.ini  name.ichimonji10.NotificationGenerator.desktop  pylintrc  pyproject.toml
python/notification-generator/notification_generator/: __init__.py  cli.py  dbus.py  gui.py
python/price-predictor/: Makefile  README.rst  mypy.ini  pyproject.toml
python/price-predictor/pp/: __init__.py  constants.py  datasets.py  exceptions.py  model.py  predict.py  utils.py
python/price-predictor/pp/cli/: __init__.py  pp_dataset.py  pp_db.py  pp_model.py  pp_predict.py  utils.py
python/price-predictor/pp/db/: __init__.py  calc.py  common.py  count.py  init.py  read.py  write.py
python/price-predictor/pp/static/fixture-column-name-mismatch/: metadata.csv
python/price-predictor/pp/static/fixture-king-county/: data.csv
python/price-predictor/pp/static/fixture-king-county-malformed-date/: data.csv  metadata.csv
python/price-predictor/pp/static/fixture-missing-file/: data.csv
python/price-predictor/pp/static/fixture-simple/: metadata.csv
python/price-predictor/pp/static/king-county/: metadata.csv
python/price-predictor/scripts/: gen-plots.sh
python/price-predictor/tests/: __init__.py
python/price-predictor/tests/functional/: __init__.py  test_cli_pp_dataset.py  test_cli_pp_db.py  test_cli_pp_model.py  test_cli_pp_predict.py  test_pp_dataset.py  test_pp_db.py  utils.py
python/price-predictor/tests/unit/: __init__.py
python/pytest-cleanup/: README.rst  pyproject.toml
python/pytest-cleanup-nested/: .mypy.ini  .pre-commit-config.yaml  README.rst  lint.sh  pyproject.toml
python/pytest-cleanup-nested/pytest_cleanup_nested/: __init__.py
python/pytest-cleanup-nested/tests/: __init__.py  test_nested_fixtures.py
python/pytest-cleanup-pdb/: .gitignore  .pre-commit-config.yaml  README.rst  lint.sh  pyproject.toml
python/pytest-demo/: .gitignore  lint-and-test.sh  pyproject.toml
python/pytest-demo/pytest_demo/: __init__.py
python/pytest-demo/tests/: test_naming.py  test_parametrization.py
python/unit-tracker/: README.rst  lint.sh  pyproject.toml
python/unit-tracker/unit_tracker/: __init__.py  dbus.py
rust/dynamic-dispatch/: Cargo.toml  README.md
rust/factory_function/: Cargo.toml
rust/guessing_game/: Cargo.toml
rust/hello_web_server/: Cargo.toml
rust/mean_median_mode/: Cargo.toml
rust/minigrep/: Cargo.toml
rust/not_gen/: Cargo.toml
rust/not_gen/src/: lib.rs  main.rs
rust/pig_latin/: Cargo.toml
rust/rectangles/: Cargo.toml
rust/str_own/: Cargo.toml
rust/trait_object_lifetime/: Cargo.toml
skillsusa/: README.rst
(+200 files in other folders)
