[tool.poetry]
name = "intersphinx-path-2"
version = "0.1.0"
description = ""
authors = ["Jeremy Audet <jerebear@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
