[tool.poetry]
name = "intersphinx-path-root"
version = "0.1.0"
description = ""
authors = ["Jeremy Audet <jerebear@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^2.4.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
