[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
author = 'Jeremy Audet'
author-email = 'jerebear@protonmail.com'
classifiers = [
    'Development Status :: 1 - Planning',
    'Programming Language :: Python :: 3 :: Only',
]
description-file = 'README.rst'
dist-name = 'notification-generator'
home-page = 'https://www.ichimonji10.name'
module = 'notification_generator'
requires = ['jeepney']

[tool.flit.metadata.requires-extra]
dev = ['mypy', 'pylint']
gui = ['PySide2']

[tool.flit.scripts]
ng-cli = 'notification_generator.cli:main'
ng-gui = 'notification_generator.gui:main'
