[tool.poetry]
name = "pytest-cleanup"
version = "0.1.0"
description = ""
authors = ["Jeremy Audet <jerebear@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
