[tool.poetry]
name = "pytest-demo"
version = "0.1.0"
description = ""
authors = ["Jeremy Audet <jerebear@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.761"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
