# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "not_gen"
version = "0.1.0"
authors = ["Jeremy Audet <jerebear@protonmail.com>"]
edition = "2018"

[dependencies]
clap        =  "^2.33.0"
dbus        =  "^0.6.5"
serde_json  =  "^1.0.40"
textwrap    =  {version = "^0.11.0", features = ["term_size"]}
